cluster/apps/dendrite/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dendrite
  namespace: dendrite
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "matrix.ejsadiarin.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /_matrix
      backendRefs:
        - name: dendrite
          port: 8008
    - matches:
        - path:
            type: PathPrefix
            value: /_dendrite
      backendRefs:
        - name: dendrite
          port: 8008
